# TeamTalk

./: LICENSE  README.md
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/daogenerator/: build.gradle
android/mgimlibs/: build.gradle
auto_setup/: INSTALL.md  README.md  setup.sh
auto_setup/gcc_setup/: gcc_setup.sh
auto_setup/im_server/: setup.sh
auto_setup/im_web/: setup.sh
auto_setup/mariadb/: setup.sh
auto_setup/redis/: setup.sh
doc/: README.md  RELEASE.md  http接口定义.md  协议文件说明.md
ios/: .gitignore  Podfile
ios/TeamTalk/: AppDelegate.h  AppDelegate.m  Info.plist  TeamTalk-Prefix.pch  main.m
ios/TeamTalk.xcodeproj/: project.pbxproj
ios/TeamTalk.xcworkspace/: contents.xcworkspacedata
ios/TeamTalkTests/: Info.plist  TeamTalkTests.m
mac/: Podfile  README  StyleSettings.plist
mac/TeamTalk/: DDAppDelegate.h  DDAppDelegate.m  DDApplication.h  DDApplication.m  DDChattingContactListCell.h  DDChattingContactListCell.m  DDChattingContactListModule.h  DDChattingContactListModule.m  DDChattingContactListViewController.h  DDChattingContactListViewController.m  DDChattingMyLine.h  DDChattingMyLine.m  DDChattingViewModule.h  DDChattingViewModule.m  DDCornerView.h  DDCornerView.m  DDDuoduoProtocol.h  DDGroupViewController.xib  DDIntranentViewController.xib  DDIntranetCell.h  DDIntranetCell.m  DDIntranetContentViewController.h  DDIntranetContentViewController.m  DDIntranetContentViewController.xib  DDIntranetEntity.h  DDIntranetEntity.m  DDIntranetModule.h  DDIntranetModule.m  DDIntranetViewController.h  DDIntranetViewController.m  DDRecentContactRowView.h  (+27 more)
mac/TeamTalk.xcodeproj/: project.pbxproj
pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto  create.sh  sync.sh
php/: .gitignore
server/src/base/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EncDec.cpp  EncDec.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  TokenValidator.h  UtilPdu.cpp  UtilPdu.h  atomic.h  cmake_install.cmake  http_parser.cpp  http_parser.h  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h  impdu.h  log4z.cpp  log4z.h  netlib.cpp  (+7 more)
server/src/base/pb/protocol/: IM.BaseDefine.pb.cc  IM.File.pb.h  IM.Group.pb.cc  IM.Login.pb.cc  IM.Login.pb.h  IM.Other.pb.h  IM.Server.pb.cc  IM.SwitchService.pb.cc
server/src/base/security/: security.h
server/src/base/slog/: slog_api.h
server/src/db_proxy_server/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  README  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf
server/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  Login.h  LoginStrategy.h  MessageContent.cpp  MessageContent.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp  UserAction.h  UserModel.cpp  UserModel.h
server/src/file_server/: CMakeLists.txt  config_util.cpp  config_util.h  file_client_conn.cpp  file_client_conn.h  file_msg_server_conn.cpp  file_msg_server_conn.h  file_server.cpp  fileserver.conf  offline_file_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp  transfer_task_manager.h
server/src/libsecurity/android/jni/: CMakeLists.txt  aes.h  aes_core.cpp  md5.cpp  md5.h
server/src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  ipparser.cpp  ipparser.h  log4cxx.properties  login_server.cpp  loginserver.conf
server/src/msfs/: CMakeLists.txt  CriticalSection.h  FileManager.cpp  HttpConn.cpp  HttpConn.h  StringUtils.cpp  StringUtils.h  main.cpp  msfs.conf.example
server/src/msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileHandler.h  FileServConn.cpp  FileServConn.h  GroupChat.cpp  GroupChat.h  ImUser.cpp  ImUser.h  LoginServConn.cpp  MsgConn.cpp  MsgConn.h  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  RouteServConn.h  msg_server.cpp  msgserver.conf  policy.xml
server/src/push_server/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  apns_client.cpp  apns_client.h  apns_client_handler.cpp  apns_client_handler.h  apns_feedback_handler.cpp  apns_feedback_handler.h  apns_msg.cpp  apns_msg.h  byte_stream.cpp  byte_stream.h  main.cpp  pdu_msg.cpp  pdu_msg.h  push_app.cpp  push_app.h  push_app_define.h  push_define.h  push_server.cpp  push_server.h  push_server_handler.cpp  push_server_handler.h  push_session.cpp  push_session.h  push_session_handler.cpp  push_session_handler.h  pushserver.conf  session_manager.cpp  session_manager.h
server/src/push_server/bufferloop/: buffer_loop.hpp
server/src/push_server/sigslot/: sigslot.h
server/src/push_server/socket/: base_handler.hpp  base_io_stream.cpp  base_io_stream.h  base_msg.h  base_socket.hpp  base_thread.hpp  epoll_io_loop.cpp  epoll_io_loop.h  io_loop.cpp  io_loop.h  socket_io.h  socket_io_define.h  ssl_client_async.cpp  ssl_client_async.h  tcp_client_async.cpp  tcp_client_async.h  tcp_server.cpp  tcp_server.h  tcp_session_async.cpp  tcp_session_async.h
server/src/push_server/thread/: base_thread.hpp
server/src/push_server/timer/: Timer.hpp
server/src/push_server/type/: base_type.h
server/src/slog/: CMakeLists.txt  log4cxx.properties  slog_api.cpp
(+1949 files in other folders)
