cmake_minimum_required(VERSION 2.6)
PROJECT(security)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH .)

if(WIN32)
ADD_DEFINITIONS()
else()
ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -DSERVER)
endif()
INCLUDE_DIRECTORIES(. ../include)
LINK_DIRECTORIES(.)
ADD_LIBRARY(security STATIC ${SRC_LIST})
#ADD_LIBRARY(security SHARED ${SRC_LIST})


TARGET_LINK_LIBRARIES(security) 
 
